# temporal-batch-processing-python

./: .coverage  CLAUDE.md  README.md  TMP_hello_activity.py  pyproject.toml  pytest.ini  sessions.json
batch_processing/: README.md  activities.py  pyproject.toml  shared.py  starter.py  worker.py  workflow.py
scripts/: __init__.py  run_workflow.py  start_worker.py
src/temporal_batch/: __init__.py  activities.py  workflows.py
tests/: __init__.py  conftest.py  test_activities.py  test_workflows.py
tests/integration/: __init__.py  test_batch_processing.py
tmp_batch_java/: .gitignore  README.md  grafana-sdk-metrics.json
tmp_batch_java/core/src/main/java/io/temporal/samples/batchprocessing/: Caller.java  TemporalClient.java  Worker.java
tmp_batch_java/core/src/main/java/io/temporal/samples/batchprocessing/metrics/: MetricsUtils.java
