[project]
name = "temporal-batch"
version = "0.1.0"
description = "Temporal batch processing sample"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.17.0",
]

[project.scripts]
temporal-worker = "scripts.start_worker:main"
temporal-workflow = "scripts.run_workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_batch"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
